feat(shift): añade API y frontend de turnos
